# osx_focus_stealing_detector

./: .gitignore  CLAUDE.md  LICENSE  README.md  focus_stealer.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
FocusStealer/: Package.swift
FocusStealer/Sources/FocusStealer/: FocusStealerApp.swift  FocusWatcher.swift  HistogramView.swift  MenuBarView.swift
FocusStealer/Sources/FocusStealerLib/: FocusEvent.swift  FocusStore.swift  Formatters.swift
FocusStealer/Tests/FocusStealerTests/: FocusEventTests.swift  FocusStealerTests.swift  FocusStoreTests.swift  FormattersTests.swift
docs/plans/: 2026-02-04-swift-menubar-app-design.md  2026-02-04-swift-menubar-implementation.md  2026-02-05-histogram-design.md  2026-02-05-histogram-implementation.md
