[project]
name = "focus-stealer"
version = "1.0.0"
description = "Prints the active macOS app focus"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.12,<3.15"
dependencies = [
    "pyobjc>=12.1",
]

[project.scripts]
focus-stealer = "focus_stealer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["focus_stealer.py"]
